# atomic_function

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
atomic_function.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
atomic_functions/: dos.py  small_function.py
