[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
  "numpy",
  "scipy",
  "ase",
  "pymatgen",
  "sevenn",
  "siman",
]

requires-python = ">=3.8"

[project]
name = "atomic_function"
authors = [{name = "Daniil Chernyshov", email = "danyogi2000@mail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}

