[metadata]
name = "defects_se"
version = attr: defects_se.__version__
author = "Daniil"
author_email = "danyogi2000@gmail.ru"
url = "https://github.com/djarepublic/mole"
description = "some desc"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
keywords = ["dos", "md", "interstitial"]
license = "MIT"
classifiers =
    "License :: OSI Approved :: MIT License"  # Fixed: Must match the declared license (was BSD)
    "Programming Language :: Python :: 3"


[options]
packages = find:
zip_safe = true
include_package_data = true
install_requires = 
    numpy
    ase
    scipy
    siman
    tqdm
    pymatgen
    sevenn
    mp_api
