[metadata]
name = "atomic_function"
version = 0.1.0
author = "Daniil"
author_email = "danyogi2000@gmail.ru"
url = "https://github.com/djarepublic/atomic_function"
description = "some desc"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
keywords = ["dos"]
license = "MIT"
classifiers =
    "License :: OSI Approved :: MIT License"  # Fixed: Must match the declared license (was BSD)
    "Programming Language :: Python :: 3"


[options]
packages = find:
zip_safe = true
include_package_data = true
install_requires = 
    numpy
    ase
    scipy
    siman
    tqdm
    pymatgen
    sevenn
    mp_api
